--- a/Trabalho4JS.html
+++ b/Trabalho4JS.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Exercícios #04</title>
+    <link rel="stylesheet" href="Trabalho4JS.css">
 </head>
 <body>
     <main>
